tests/ui/async-await/no-const-async.stderr
error: functions cannot be both `const` and `async`
  --> $DIR/no-const-async.rs:4:5
   |
LL | pub const async fn x() {}
   | ----^^^^^-^^^^^----------
   |     |     |
   |     |     `async` because of this
   |     `const` because of this

error: aborting due to previous error

